@@ -10,7 +10,13 @@ typedef struct {
 	int  disable_mask;
 } EPopupMenu;
 
-void           e_popup_menu_run (EPopupMenu *menu_list, GdkEventButton *event,
-				 int disable_mask, void *closure);
+GtkMenu *e_popup_menu_create  (EPopupMenu     *menu_list,
+			       int             disable_mask,
+			       void           *closure);
+
+void     e_popup_menu_run     (EPopupMenu     *menu_list,
+			       GdkEventButton *event,
+			       int             disable_mask,
+			       void           *closure);
 
 #endif /* E_POPUP_MENU_H */
