@@ -1,3 +1,9 @@
+2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* e-sexp.c (eval_dump_result): `#if 0'ed out.
+
+	* e-popup-menu.h (e_popup_menu_create): New prototype.
+
 2000-07-10  Dan Winship  <danw@helixcode.com>
 
 	* e-html-utils.c: Fix warnings.
